--- a/themes/custom/leopitt/sass/state/_nav.scss
+++ b/themes/custom/leopitt/sass/state/_nav.scss
@@ -3,6 +3,9 @@
  * Nav.
  */
 .nav-main {
+  /* Hide by default. */
+  display: none;
+
   a {
     text-shadow: 4px 4px black;
     transition: text-shadow .25s ease-in-out, transform .25s ease-in-out;
@@ -15,4 +18,12 @@
       text-shadow: 4px 4px rgba(0, 0, 0, .2);
     }
   }
+}
+
+.page-nav-wrapper.visible .nav-main {
+  /*
+   * Reveal when parent wrapper is active. Important to prevent masked nav items
+   * from being clickable when in mobile.
+   */
+  display: block;
 }
