--- a/themes/custom/leopitt/sass/state/_page.scss
+++ b/themes/custom/leopitt/sass/state/_page.scss
@@ -8,6 +8,7 @@
     pointer-events: none;
 
     &.visible {
+      display: block;
       pointer-events: all;
     }
   }
